--- a/scripts/apps/analytics/views/analytics-settings-configuration.html
+++ b/scripts/apps/analytics/views/analytics-settings-configuration.html
@@ -1,4 +1,4 @@
-<div class="analytics-widget-config modal-wrapper" ng-if="widget" ng-include="'scripts/apps/analytics/views/analytics-settings.html'"></div>
-<div ng-if="!widget" sd-modal data-model="modalActive" class="wrapped analytics-widget-config">
+<div class="aggregate-widget-config modal-wrapper" ng-if="widget" ng-include="'scripts/apps/analytics/views/analytics-settings.html'"></div>
+<div ng-if="!widget" sd-modal data-model="modalActive" class="wrapped aggregate-widget-config">
     <div class="modal-wrapper" ng-include="'scripts/apps/analytics/views/analytics-settings.html'"></div>
 </div>
